chore: fix wrap in safari core.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,5 +34,5 @@
 }
 
 pre.astro-code code span.line {
-	text-wrap: nowrap;
+	white-space: pre;
 }
